+ Zero的初始化文档

--- a/Rasbperry-Pi-Zero/docs/1-系统初始化.md
+++ b/Rasbperry-Pi-Zero/docs/1-系统初始化.md
@@ -11,12 +11,105 @@
 
 <!-- vim-markdown-toc GFM -->
 
+* [主机系统的设置](#主机系统的设置)
+* [Zero系统的初始化](#zero系统的初始化)
+* [登录Zero系统](#登录zero系统)
+
 <!-- vim-markdown-toc -->
 
 ---
 
-<!-- Object info -->
+特定于Raspberry Pi Zero模块的系统初始化，目的是让主机系统可以通过USB SSH登录Zero
 
 ---
 
+## 主机系统的设置
 
+想要让主机系统可以通过USB SSH登录Zero系统，需要进行一些设置，其中又根据主机系统类型而有所不同：
+
+- Linux系统（以Arch Linux为例）
+
+1. 首先需要安装avahi-daemon，执行以下命令：
+
+    ```shell
+    pacman -S avahi
+    ```
+
+2. 执行命令`systemctl status avahi-daemon`查看avahi-daemon状态，如果不是开机自启则执行以下命令使能自启：
+
+    ```shell
+    systemctl enable --now avahi-daemon
+    ```
+
+    > '--now'参数使avahi-daemon立即启动
+
+3. 参考搜到的好多中英文教程进行到这一步就可以了，但是试了好多次并不能正确登录Zero，最后还是在Arch Wiki找到了解决方法：
+
+    根据[Avahi - Hostname resolution](https://wiki.archlinux.org/title/Avahi#Hostname_resolution)部分所说：
+
+    > Avahi provides local hostname resolution using a "hostname.local" naming scheme. To enable it, install the nss-mdns package and start avahi-daemon.service.
+    >
+    > Then, edit the file /etc/nsswitch.conf and change the hosts line to include mdns_minimal [NOTFOUND=return] before resolve and dns.
+
+    还需要额外的两步设置，如下：
+
+    1. 安装nss-mdns：
+
+        ```shell
+        pacman -S nss-mdns
+        ```
+
+    2. 修改Name Service Switch配置文件`/etc/nsswitch.conf`：
+
+        在`hosts`行的`resolve`之前插入`mdns_minimal [NOTFOUND=return]`：
+
+        ```shell
+        hosts: ... mdns_minimal [NOTFOUND=return] resolve [!UNAVAIL=return] dns ...
+        ```
+
+4. 然后执行以下命令重启avahi-daemon：
+
+```shell
+systemctl restart avahi-daemon
+```
+
+- Windows系统
+
+1. 首先到[Apple - Bonjour](https://support.apple.com/kb/DL999?locale=zh_CN)下载安装Bonjour驱动
+2. 正常情况下插上Zero后Windows会将其识别为一个USB网络设备，如果识别成了一个USB串行设备，则需要安装RNDIS驱动
+3. 本仓库存储了[RNDIS](../source/RNDIS.7z)，将其解压到任意位置
+4. 然后在设备管理器将系统自动安装的驱动更新为RNDIS即可，具体请自行搜索，很简单
+
+## Zero系统的初始化
+
+Zero模块的系统和其他模块是一样的，但因为Zero没有有线网络接口，系统安装完成后第一次上电想通过SSH登录系统需要以下初始化步骤：
+
+1. 系统安装完成后将TF卡插入电脑并挂载
+
+2. 进到挂载路径的`/boot`文件夹
+
+3. 创建'SSH'文件
+
+    > 空文件即可，只要文件名是'SSH'
+
+4. 打开`/boot/config.txt`，在文件最后新增一行内容为**dtoverlay=dwc2**
+
+5. 打开`/boot/cmdline.txt`，找到'rootwait'配置项，在后面插入**modules-load=dwc2,g_ether**
+
+    > 'rootwait'后面可能还有别的配置，确保插入的内容是紧随'rootwait'的
+    >
+    > 每个配置项之间用空格隔开
+
+## 登录Zero系统
+
+以上所有配置完成后即可将TF卡插入Zero的卡槽，然后将Zero的USB（自己安装的，本身不自带）插入主机，这时Zero会上电自启（可以看到绿灯闪烁），主机系统显示新接入了一个USB网络设备
+
+现在即可通过**raspberrypi.local**访问Zero，`ping raspberrypi.local`应该是成功的，然后使用以下命令连接Zero：
+
+```shell
+ssh pi@raspberrypi.local
+```
+
+> 系统本身和其他模块的没有区别，默认用户名都是'pi'，其默认密码是'raspberry'
+>
+> 'raspberrypi.local'中的'raspberrypi'是Zero系统的主机名(Host Name)，可以自行修改，但重启后再次登录就要用新的主机名登录了，例如`ssh pi@modified.local`
