--- a/Raspberry-Pi-Zero/docs/1-系统初始化.md
+++ b/Raspberry-Pi-Zero/docs/1-系统初始化.md
@@ -106,6 +106,8 @@ Zero模块的系统和其他模块是一样的，但因为Zero没有有线网络
 
 现在即可通过**raspberrypi.local**访问Zero，`ping raspberrypi.local`应该是成功的，然后使用以下命令连接Zero：
 
+*注意：第一次插上Zero可能在主机系统是ping不通它的，需要将Zero拔下来重插一次*
+
 ```shell
 ssh pi@raspberrypi.local
 ```
