--- a/Raspberry-Pi-Zero/docs/1-系统初始化.md
+++ b/Raspberry-Pi-Zero/docs/1-系统初始化.md
@@ -1,7 +1,7 @@
 # 1-系统初始化
 
 <!-- File: 1-系统初始化.md -->
-<!-- Auther: YJ -->
+<!-- Author: YJ -->
 <!-- Email: yj1516268@outlook.com -->
 <!-- Created Time: 2021-06-19 02:21:21 -->
 
