--- a/Raspberry-Pi/docs/Raspberry-Pi-OS/2-切换网络管理器.md
+++ b/Raspberry-Pi/docs/Raspberry-Pi-OS/2-切换网络管理器.md
@@ -1,7 +1,7 @@
 # 2-切换网络管理器
 
 <!-- File: 2-切换网络管理器.md -->
-<!-- Auther: YJ -->
+<!-- Author: YJ -->
 <!-- Email: yj1516268@outlook.com -->
 <!-- Created Time: 2021-06-20 02:05:19 -->
 
